<package format="2">
  <name>gem_e4_description</name>
  <version>1.0.0</version>
  <description>
    This package contains configuration data, 3D models and launch files for gem_e4_urdf robot
  </description>
  <author>Hang Cui</author>
  <maintainer email="hangcui1201@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
